[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-energy-forecasting"
version = "0.1.0"
description = "Quantum-Ready, Weather-Aware Kernel Forecasting for High-Resolution Electricity Demand & Market Insights"
authors = [{name = "ol-s-cloud", email = "contact@ol-s-cloud.dev"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["quantum", "machine-learning", "energy", "forecasting", "electricity", "weather", "grid"]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "qiskit>=0.45.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "xarray>=2023.1.0",
    "netcdf4>=1.6.0",
    "cdsapi>=0.6.0",
    "shap>=0.42.0",
    "plotly>=5.15.0",
    "dash>=2.10.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
all = ["quantum-energy-forecasting[dev,docs]"]

[project.urls]
Homepage = "https://github.com/ol-s-cloud/quantum-energy-forecasting"
Documentation = "https://quantum-energy-forecasting.readthedocs.io"
Repository = "https://github.com/ol-s-cloud/quantum-energy-forecasting"
"Bug Tracker" = "https://github.com/ol-s-cloud/quantum-energy-forecasting/issues"

[project.scripts]
qef = "quantum_energy_forecasting.cli:main"
qef-dashboard = "quantum_energy_forecasting.dashboard.app:main"
qef-data = "quantum_energy_forecasting.data.collector:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=quantum_energy_forecasting --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/quantum_energy_forecasting"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
